# IPAT

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_assignment_college_grade.py  003_chat_threads_messages_reads.py
backend/app/: celery_app.py  main.py
backend/app/api/: assignments.py  auth.py  chat.py  companies.py  notifications.py  periods.py  reports.py  tasks.py  users.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  assignment.py  chat.py  company.py  notification.py  period.py  report.py  task.py  user.py
backend/app/schemas/: assignment.py  auth.py  chat.py  company.py  notification.py  period.py  report.py  task.py  user.py
backend/app/services/: minio_client.py  period_lifecycle.py
backend/app/tasks/: notifications.py
backend/scripts/: seed_admin.py
backend/tests/: conftest.py  test_assignment_grade.py  test_assignments_permissions_and_scope.py  test_period_lifecycle.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/api/: assignments.ts  auth.ts  chat.ts  client.ts  companies.ts  notifications.ts  periods.ts  reports.ts  tasks.ts  users.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: Assignments.tsx  Chat.tsx  Companies.tsx  Dashboard.tsx  Diary.tsx  (+5 more)
(+2 files in other folders)
